# FoodCooker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
data/: categories.json  eval_ground_truth.json  nutrition_db.json  recipes_raw.json  user_profiles.json
data/chroma_db/: chroma.sqlite3
data/history/: 0152b7b3.json  0e1afbeb.json  20358f88.json  2332dfdb.json  39a24546.json  d246088c.json  d456f8f9.json  fcaa3892.json
data/logs/: eval_results.json
doc/plans/: superpowers-agent-langchain-gleaming-yao.md
scripts/: evaluate_retriever.py  ingest_recipes.py
src/food_cooker/: __init__.py  cache.py  llm.py  logging_config.py  settings.py
src/food_cooker/agent/: executor.py  prompts.py  supervisor.py
src/food_cooker/agent/tools/: __init__.py  feedback_tool.py  image_generation_tool.py  nutrition_calculator_tool.py  recipe_adaptor_tool.py  recipe_retriever_tool.py  shopping_list_tool.py  user_profile_tool.py  vision_tool.py
src/food_cooker/api/: app.py  auth.py  db.py  deps.py  schemas.py
src/food_cooker/api/routes/: auth.py  chat.py  vision.py
src/food_cooker/memory/: token_buffer.py
src/food_cooker/models/: __init__.py  recipe.py  user_profile.py
src/food_cooker/ui/: chainlit_app.py  history_store.py  session_manager.py
src/food_cooker/vectorstore/: chroma_client.py  hybrid_retriever.py
tests/: conftest.py
tests/test_agent/: test_executor.py
tests/test_memory/: test_token_buffer.py
tests/test_tools/: test_feedback_tool.py  test_nutrition_calculator_tool.py  test_recipe_adaptor_tool.py  test_recipe_retriever_tool.py  test_shopping_list_tool.py  test_user_profile_tool.py
