[project]
name = "food-cooker"
version = "0.1.0"
description = "Personalized recipe generation agent with LangChain + RAG"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai",
    "langchain-community",
    "langchain-chroma",
    "chromadb",
    "langchain-huggingface",
    "dashscope",
    "pydantic>=2.0",
    "pydantic-settings",
    "chainlit>=0.7.0",
    "python-dotenv",
    "pytest>=8.0",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"