[project]
name = "food-cooker"
version = "0.1.0"
description = "Personalized recipe generation agent with LangChain + RAG"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai",
    "langchain-community",
    "langchain-chroma",
    "chromadb",
    "langchain-huggingface",
    "dashscope",
    "pydantic>=2.0",
    "pydantic-settings",
    "chainlit>=0.7.0",
    "python-dotenv",
    "pytest>=8.0",
    "pytest-asyncio",
    "filelock",
    "langgraph-checkpoint-postgres",
    "fastapi[standard]>=0.115.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0",
    "rank-bm25>=0.2.2",
    "redis>=5.0",
    "sentence-transformers>=3.0",
    "openai>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"